# side-projects

3D_printer/: Makefile.am  configure.ac
3D_printer/data/: part1.txt  part2.txt  part3.txt  part4.txt
3D_printer/include/: part.hpp  shapes.hpp
3D_printer/src/exec/: Makefile.am  main.cpp
3D_printer/src/geometry/: Makefile.am  part.cpp  shapes.cpp
Atomistic_Simulations/Coloumb_energy/: Epot.py
Atomistic_Simulations/DFT_graphene/: atomic_eigenproblem_solver.m  coulomb_pot.m  get_plane_waves.m  pseudo_pot.m  pseudopotential_generator.m
Atomistic_Simulations/LJ_vacancy_computation/: computational_cell.m  main_program.m  minimize_energy.m  total_energy.m
Atomistic_Simulations/MC_simulations/: MC_move.m  calc_energy_faster.m  integrate.m  main_program_MC.m  setup_cell.m
Atomistic_Simulations/MD_diffusion/: calc_energy.m  calc_ke.m  initialize_velocities.m  main_program_MD.m
Atomistic_Simulations/Plane_wave_DFT/: INPUT_PW.def  hydrogen_atom_pot.m  main_program_PBC_QM.m
BiCGSTAB_solver/: configure.ac
BiCGSTAB_solver/data/: nasa1824_b2.mtx  nasasrb_b.mtx  test.mtx  test_b.mtx
BiCGSTAB_solver/include/: solverbicgstab.hpp  solveroperators.hpp  sparse.hpp  vectorio.hpp
BiCGSTAB_solver/src/: Makefile.am  main.cpp
Cache_optimization/: Makefile.am  configure.ac
Cache_optimization/include/: initmatrix.hpp  transpose.hpp  utilities.hpp
Cache_optimization/src/exec/: Makefile.am  main1.cpp  main2.cpp  timer.c
Cache_optimization/src/tests/: Makefile.am  tests.cpp
Cache_optimization/src/utilities/: Makefile.am  initmatrix.cpp  transpose.cpp
Carbon_Q&A_Project/: parser.py
Carbon_Q&A_Project/academic_fields/: academic_field_list.html  fields_list.txt  page_parser.py
Carbon_Q&A_Project/backend_code_Q/: check_tags.py  check_tags_all_users.py  import_data.py  parse_question.py
Carbon_Q&A_Project/beta_program/: 02:08:2014_16:04:28_301705.txt  02:08:2014_19:05:29_347842.txt  02:08:2014_19:06:48_723390.txt  02:08:2014_19:10:22_622034.txt  02:08:2014_19:11:05_231332.txt  02:08:2014_19:12:15_684053.txt  02:08:2014_19:14:16_302161.txt  05:02:2015_20:12:49_921808.txt  05:02:2015_20:15:34_700295.txt  24:07:2014_16:49:03_394041.txt  24:07:2014_16:51:45_650174.txt  24:07:2014_17:43:41_397221.txt  Jacob.txt  Joe.txt  Mike.txt  Mina.txt  Q_to_file.py  check_tags_all_users.py  common_word_filter_10000.txt  export_user_tags.py  get_Qnumber.py  import_data.py  misspelled_contractions.txt  new_tags.py  parse_question.py  parse_question2.py  user_IDs.txt
Carbon_Q&A_Project/common_word_filter/: common_word_filter.py  common_word_filter_11000.txt  common_word_filter_15000.txt  common_word_filter_20000.txt  common_word_filter_4000.txt  common_word_filter_9000.txt
Carbon_Q&A_Project/super_parser/: common_word_filter_12000.txt  wiki_02  (+6 more)
Conjugate_gradient_solver/: CGSolver.cpp  CGSolver.hpp  COO2CSR.cpp  main.cpp  matvecops.cpp  matvecops.hpp  matvecops_all.cpp
Craigslist_parser/: getCLemails.py
Gene_Prediction/: genepredict.py  test_data.fsa  testseq1.fsa  testseq1_ref.orf  testseq2.fsa  testseq2_ref.orf
Heat_flow/: CGSolver2.cpp  CGSolver2.hpp  CGSolver3.cpp  find_size.cpp  heat.cpp  heat.hpp  heat2.cpp  main.cpp  main2.cpp  matvecops2.cpp  postprocess.py  postprocess2.py  postprocess3.py  sparse.cpp  sparse.hpp  sparse2.cpp  sparse2.hpp
Image_processing/: Makefile  Makefile2  Makefile3  assignment6.cpp  image.cpp  image.hpp  main.cpp
Indeed_scraper/: dev_code.py  indeedLinksScraper.py
Maze_Solver/: checksoln.py  mazesolver.cpp
Molecular_dynamics/: CMakeLists.txt  ConvertVTKBinaryToASCII  Makefile  code.py  main.cpp  rand.py
Molecular_dynamics/data/: config512.yaml  config512_10.yml  config512_100.yml  config512_1000.yml  config64.yaml  config64_1000.yml  config_dat.yml  config_dat_binary.yml  config_dat_no_i.yml  config_no_i.yml  config_no_io.yml  config_no_o.yml  random.txt  solution10.vtk  solution20.vtk
Molecular_dynamics/include/: container (new-host-2.home's conflicted copy 2015-03-10).hpp  container.hpp  macros.hpp  operators.hpp  particle.hpp  swap.hpp  timer.h
Molecular_dynamics/src/exec/: CMakeLists.txt  containerExt.i  main.cpp  main.py  solution10.vtk
Molecular_dynamics/src/tests/: CMakeLists.txt  tests.cpp
Molecular_dynamics/src/utilities/: CMakeLists.txt  swap.cpp
Particle_Image_Velocimetry/code/: CMakeLists.txt  image.py  main.py  piv.py  pivcext.c  pivcext.h  pivcext.i
Process_DNA_image/: Makefile  imageanalysis.hpp  imageio.cpp  imageio.hpp  main.cpp  maintest.cpp  tiffdemo.c
Recommendation_system/: similarity.py
Shazam_audio_fingerprinting/: README.txt  configure.ac
Shazam_audio_fingerprinting/data/: spectrogram.txt
Shazam_audio_fingerprinting/include/: audioio.h  glob.hpp  identify.hpp
Shazam_audio_fingerprinting/src/: Makefile.am  audioio.c  glob.cpp  identify (Joe's Desktop's conflicted copy 2015-02-26).cpp  identify.cpp  main.cpp
TechCrunch_parser/: TC_startup_articles_data2.txt  TC_startup_articles_data3.txt  analyzeText.py  common_word_filter_1000.txt  parseTC.py
Truss_geometry/: main.py  truss.py
Visualizations/: get_node_edges_ZrGPTMS.py
Wikipedia_parser/: total_word_frequency.py  word_frequency.py
Wing_design_CFD/: airfoil.py  main.py
Wolio_project/: decision_factor_mapping.txt  protoype.py  testEvent_template.txt  testEvents.txt  testUsers.txt
(+1122 files in other folders)
